++mail sonar fix

--- a/src/main/resources/templates/reset_password.html
+++ b/src/main/resources/templates/reset_password.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reset Your Password</title>
+  <title>Your Password Reset Code</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -48,7 +48,7 @@
       display: inline-block;
       background-color: #1B262C;
       color: #00ff87;
-      padding: 10px 20px;
+      padding: 12px 20px;
       font-size: 20px;
       font-weight: bold;
       border-radius: 8px;
@@ -86,14 +86,14 @@
 <body>
 <div class="email-container">
   <div class="navbar">
-    Hello, <span th:text="${username}">Name Surname</span>
+    Hello, <span th:text="${username}"></span>
   </div>
   <div class="content">
     <p>To reset your password, please use the code below:</p>
     <p class="reset-code" th:text="${activation_code}">XXXXXX</p>
-    <p>This code will expire in 15 minutes. Please don’t hesitate to contact us if you need any assistance.</p>
+    <p>This code will expire in 15 minutes. If you didn't request a password reset, please ignore this email.</p>
     <div class="footer">
-      <p>The Bitask Team</p>
+      <p>Thanks,<br/>The Bitask Team</p>
     </div>
   </div>
 </div>
