++activate-account transaction fix

--- a/src/main/resources/templates/activate_account.html
+++ b/src/main/resources/templates/activate_account.html
@@ -92,7 +92,7 @@
     <div class="content">
         <p>We’re excited to have you on board! To complete your account activation, please use the code below:</p>
         <p class="activation-code" th:text="${activation_code}">XXXXXX</p>
-        <p>This code will expire in 15 minutes. Please don’t hesitate to contact us if you need any assistance.</p>
+        <p>This code will expire in 1 minute. Please don’t hesitate to contact us if you need any assistance.</p>
         <div class="footer">
             <p>Thanks for joining,<br/>The Bitask Team</p>
         </div>
