++validationMail time flexibility

--- a/src/main/resources/templates/reset_password.html
+++ b/src/main/resources/templates/reset_password.html
@@ -92,7 +92,7 @@
   <div class="content">
     <p>To reset your password, please use the code below:</p>
     <p class="reset-code" th:text="${activation_code}">XXXXXX</p>
-    <p>This code will expire in 15 minutes. If you didn't request a password reset, please ignore this email.</p>
+    <p>This code will expire in 1 minute. If you didn't request a password reset, please ignore this email.</p>
     <div class="footer">
       <p>Thanks,<br/>The Bitask Team</p>
     </div>
